# wolf-core

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: codeql-analysis.yml  main.yml  publish.yaml  pylint.yml  unittest.yml
core/: api.py  application.py  runner.py
docs/source/: api.rst  application.rst  conf.py  core.rst  index.rst  runner.rst
tests/: test_api.py  test_application.py  test_runner.py
wolf_core/: api.py  application.py  grafana_logger.py  runner.py
