[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "wolf_core"
version = "0.1"
description = ""
authors = ["sedelpeuch <sebastien@delpeuch.net>"]

[tool.poetry.dependencies]
python = "^3.8"

[project]
name = "wolf_core"
version = "0.1"

[packages]
wolf_core = { path = "wolf_core" , develop = true }
