[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wolf_core"
version = "0.1"
description = ""
authors = ["sedelpeuch <sebastien@delpeuch.net>"]

[tool.poetry.dependencies]
python = "^3.8"
include = ["requirements.txt"]

[packages]
wolf_core = { path = "wolf_core", develop = true }

[project]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
